// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's trackPurchase destination action: all fields 1`] = `
Object {
  "purchases": Array [
    Object {
      "_update_existing_only": false,
      "app_id": "89*x$dc1)L5yD11",
      "braze_id": "89*x$dc1)L5yD11",
      "currency": "CAD",
      "email": "sa@va.bh",
      "external_id": "89*x$dc1)L5yD11",
      "price": 32519063401922.56,
      "product_id": "89*x$dc1)L5yD11",
      "properties": Object {
        "testType": "89*x$dc1)L5yD11",
      },
      "quantity": 3251906340192256,
      "time": "2021-02-01T00:00:00.000Z",
      "user_alias": Object {
        "alias_label": "89*x$dc1)L5yD11",
        "alias_name": "89*x$dc1)L5yD11",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's trackPurchase destination action: it should work with a single batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
    "x-braze-batch": Array [
      "true",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's trackPurchase destination action: it should work with a single batched events 2`] = `
Object {
  "purchases": Array [
    Object {
      "_update_existing_only": true,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "currency": "USD",
      "email": undefined,
      "external_id": "user1234",
      "price": 100,
      "product_id": "Bowflex Treadmill 10",
      "properties": Object {},
      "quantity": 1,
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
    Object {
      "_update_existing_only": true,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "currency": "USD",
      "email": undefined,
      "external_id": "user1234",
      "price": 200,
      "product_id": "Bowflex Treadmill 20",
      "properties": Object {},
      "quantity": 2,
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's trackPurchase destination action: it should work with batched events 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer my-api-key",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
    "x-braze-batch": Array [
      "true",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's trackPurchase destination action: it should work with batched events 2`] = `
Object {
  "purchases": Array [
    Object {
      "_update_existing_only": true,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "currency": "USD",
      "email": undefined,
      "external_id": "user1234",
      "price": 100,
      "product_id": "Bowflex Treadmill 10",
      "properties": Object {},
      "quantity": 1,
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
    Object {
      "_update_existing_only": true,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "currency": "USD",
      "email": undefined,
      "external_id": "user1234",
      "price": 200,
      "product_id": "Bowflex Treadmill 20",
      "properties": Object {},
      "quantity": 2,
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
    Object {
      "_update_existing_only": true,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "currency": "USD",
      "email": undefined,
      "external_id": "user1234",
      "price": 300,
      "product_id": "Bowflex Treadmill 30",
      "properties": Object {},
      "quantity": 3,
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
    Object {
      "_update_existing_only": true,
      "app_id": "my-app-id",
      "braze_id": undefined,
      "currency": "USD",
      "email": undefined,
      "external_id": "user1234",
      "price": 400,
      "product_id": "Bowflex Treadmill 40",
      "properties": Object {},
      "quantity": 4,
      "time": "2021-08-03T17:40:04.055Z",
      "user_alias": undefined,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's trackPurchase destination action: required fields 1`] = `
Object {
  "purchases": Array [
    Object {
      "app_id": "89*x$dc1)L5yD11",
      "braze_id": "89*x$dc1)L5yD11",
      "currency": "USD",
      "external_id": "89*x$dc1)L5yD11",
      "price": 32519063401922.56,
      "product_id": "89*x$dc1)L5yD11",
      "properties": Object {},
      "time": "2021-02-01T00:00:00.000Z",
    },
  ],
}
`;
